# MotionControlTest

./: .gitignore  CMakeLists.txt
Code/Control/: CMakeLists.txt  Test.cpp  config.cmake
Code/Control/include/: ControlHeaders.h  DHdCon.hpp  DRobotState.hpp  DWholeBC.hpp  Test_control.h
Code/Control/include/bk/: DHdCon.hpp
Code/Control/src/: Test_control.cpp
Code/Control/test/: Test_control.cpp  Test_control.h
Code/MultiThread/: CMakeLists.txt  test.cpp
Code/SDFast/: CMakeLists.txt  Test.cpp
Code/SDFast/TestWithChz/: QPMomCon.cpp  QPMomCon.h
Code/SDFast/TestWithChz/QP_Moment_Control/: ChzFramePlatformSelector.h  Chz_Base.h  Chz_QPMoment.cpp  Chz_QPMoment.h  GeometryConf.cpp  GeometryConf.h
Code/SDFast/TestWithChz/SDFAST/: ChzSD_Robot_d.cpp  ChzSD_Robot_s.cpp  ChzSD_sdfastdefs.cpp  ChzSD_sdfastdefs.h  ChzSD_sdfastfuncs.h  ChzSD_sdlib.cpp  Robot.bat  Robot_i
Code/SDFast/include/: DSDFast.h  DSDFastFuns.hpp  DSDFastShell.hpp  DSDFastTools.h  SDMechDefs.h
Code/Tools/: CMakeLists.txt  test.cpp
Code/Tools/include/: DRtxCEvent.hpp  DRtxCMutex.hpp  DRtxCSemaphore.hpp  DRtxCSharedMem.hpp  DRtxCThread.hpp  DRtxIPC.hpp  DRtxMultiProcComput.hpp  DRtxMultiProcCompute.hpp  DWinRtx64Tools.h  RtxHeaders.h
SDK/Eigen_SDK/: DEigen.h
SDK/Eigen_SDK/Eigen/: LEigenTool.h
SDK/Eigen_SDK/EigenQP/: QuadProg.cpp  QuadProg.h  aind.c  daxpy.c  solve.QP.c  solve.QP.compact.c
SDK/LeeQP_SDK/: CMakeLists.txt  test.cpp
SDK/LeeQP_SDK/include/LEigenQP_CPP/: Core.hpp  QPBase.h  QuadProg.h
SDK/LeeQP_SDK/lib/: LEigenQP_CPP.lib
SDK/LeeQP_SDK/src/: QuadProg.cpp  solve.QP.compact.cpp  solve.QP.cpp
SDK/LeeQP_SDK/src/f2cpp/: aind.cpp  daxpy.cpp  ddot.cpp  dpofa.cpp  dscal.cpp  f2c_lite.cpp  util.cpp
SDK/RTX64_SDK/3.2/Tracealyzer/: defaultsignals.xml  signalTemplates.xml
SDK/RTX64_SDK/3.2/Tracealyzer/Event Definitions Sample/: CustomDefinitions.xml
SDK/RTX64_SDK/3.2/Tracealyzer/cfg/: RTX64.xml
SDK/RTX64_SDK/3.2/Tracealyzer/cfg/ti-types/: rtx64_events_lost.xml  rtx64_trace_gap.xml
SDK/RTX64_SDK/3.2/VSExtensions/: RTX64VSSupport.vsix  RTXProjectWizard.vsix  RtBaseDebugMonitorVs2012.vsix  RtBaseDebugMonitorVs2013.vsix  RtBaseDebugMonitorVs2015.vsix
SDK/RTX64_SDK/3.2/help/: RTX64ManagedCodeSupport.chm  RTX64SDK.chw
SDK/RTX64_SDK/3.2/include/: ErrorCodes.h  IntervalZero.RTX64.tlb  Licensing.h  RTX64.Cpp.Win32.user.props  RTX64.Cpp.x64.user.props  RTX64Version.h  Rtapi.h  RtkApi.h  RtssApi.h  Rtx64Base.h  rtdef.h  rtnapi.h
SDK/RTX64_SDK/3.2/lib/amd64/: RtApi.lib  RtApi_Rtss.lib  RtTcpip.lib  RtkApi.lib  Rtx_Rtss.lib  StartupCrt.lib  StartupDll.lib  StartupDllCrt.lib
SDK/RTX64_SDK/3.2/lib/x86/: RtApi.lib
SDK/SDFast_SDK/: SDFastDefs.cpp  SDFastDefs.h  SDFastHeaders.h
SDK/SDFast_SDK/SDFiles/: SDGenerator.bat  SDRobot.sd  SDRobot_d.cpp  SDRobot_i  SDRobot_s.cpp  sdlib.cpp
SDK/Sim_SDK/: Mj_DataExchange.cpp  Mj_DataExchange.h
SDK/Sim_SDK/Mujocolib/: MujocoBHR_api.cpp
SDK/Sim_SDK/Mujocolib/models/: bhr7p2_contra.xml  bhr7p2_golden.xml  bhr7p2_origin.xml  bhr7p2_silver.xml  jumping_robot.xml
SDK/Sim_SDK/Mujocolib/models/7P-2 STL/: lfoo.STL  lsha.STL  lthi.STL  rfoo.STL  rsha.STL  rthi.STL
SDK/Sim_SDK/Mujocolib/models/How2ModifyFriction/: bhr7p2.xml  rdme.docx
